fix rating sidebar height to container max, add scrollbar to pages with sidebars

--- a/www/custom.css
+++ b/www/custom.css
@@ -92,7 +92,8 @@ table.dataTable tbody th.focus, table.dataTable tbody td.focus {
 #rating-customize_criteria-new_rating_factors-sidebar {
   position: sticky; 
   top: 0; 
-  height: 100vh;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 /* allow DT dropdown filter text to expand and stay on single line */
